<resources>
    <string name="app_name">Fast n Safe</string>
    <string name="title_activity_edit_user_action">EditUserActionActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main_menu">Main Menu</string>


    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="edit_messages">Edit Messages</string>
    <string name="edit_title">Subject: </string>
    <string name="message">Edit Message: </string>
    <string name="send_to">Send to: </string>
    <string name="include">Include: </string>
    <string name="name">Your Name</string>
    <string name="location">Your Location</string>
    <string name="time">Date and Time</string>
    <string name="title_activity_select_menu">SelectMenuActivity</string>
</resources>
