<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.beckoningtech.fastnsafe.EditUserActionActivity"
    tools:showIn="@layout/activity_edit_user_action">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scroll_view">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/vertical_container">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Title"
                android:textSize="30sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/user_action_title"
                android:textColorLink="@android:color/black"
                android:hint="Enter the title."
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/send_to"
                android:text="@string/send_to"
                android:textSize="30sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/recipient"
                android:textColorLink="@android:color/black"
                android:hint="Enter the name of the recipient here."
                android:textSize="14sp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:id="@+id/recipient_number"
                android:textColorLink="@android:color/black"
                android:hint="Enter the phone number of the recipient here."
                android:textSize="14sp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/recipient_email"
                android:textColorLink="@android:color/black"
                android:hint="Enter the email address of the recipient here."
                android:textSize="14sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/include"
                android:text="@string/include"
                android:textSize="30sp" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/your_name"
                android:layout_weight="0.20"
                android:text="@string/name" />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recipient_name"
                android:layout_weight="0.20"
                android:text="Recipient's Name" />

            <CheckBox
                android:text="@string/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/time_date"
                android:layout_weight="0.20" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/location"
                android:layout_weight="0.20"
                android:text="@string/location" />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/show_on_notification_bar"
                android:layout_weight="0.20"
                android:text="Notication On" />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/confirmation_screen"
                android:layout_weight="0.20"
                android:text="Confirmation Screen" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/message"
                android:layout_weight="1"
                android:text="@string/message"
                android:textSize="30sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/title"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:text="@string/edit_title"
                    android:layout_gravity="center" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="Enter subject here."
                    android:ems="10"
                    android:id="@+id/user_subject"
                    android:layout_weight="1"
                    android:textSize="14sp" />
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="Enter message here."
                android:ems="10"
                android:id="@+id/user_message"
                android:textSize="14sp"
                android:minLines="3" />

        </LinearLayout>
    </ScrollView>

</android.support.v4.widget.NestedScrollView>
